--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -103,6 +103,9 @@
 		.fct {
 			margin-left: 15px;
 		}
+		.usecase {
+			margin-left: -20px;
+		}
 		.plante {
 			margin-left: -24px;
 		}
@@ -1743,7 +1746,6 @@
 							for(let j=0; j < NbMatch; j++)
 							{
 								let UsecaseId = IdMatch[j];
-								console.log("UsecaseId = " + UsecaseId);
 								//fetch usecase name
 								console.log("Doing usecase name " + UsecaseId + " SQL request ...");
 								let UsecaseSQLRequestResultObj = [];
@@ -2769,6 +2771,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
