--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -170,6 +170,7 @@
 		globalThis.RefDatabaseSchema_Cte = ["CREATE TABLE LABO(Id integer primary key, Name text)",
 												"CREATE TABLE GALENIQUE(Id integer primary key, Name text)",
 												"CREATE TABLE CATEGORIE(Id integer primary key, Name text)",
+												"CREATE TABLE ESPECE(Id integer primary key, Name text, IMG blob)",
 												"CREATE TABLE PLANTE(Id integer primary key, Name text, Photo blob, Latin text, Famille text, Botanique blob, Molecules blob, PDyn blob, P1 text, P2 text, P3 text, PCin blob, Gestation blob, Surdosage blob, Sources blob, Interac blob, MAJ blob, Rchr int, Clin int, Reg int, RegEQ int, Dop int, Poso blob)",
 												"CREATE TABLE USEPART(Id integer primary key, Name text)",
 												"CREATE TABLE FCTS(Id integer primary key, Name text)",
@@ -2771,6 +2772,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
