--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -68,7 +68,7 @@
  			border: 0;
   			line-height: 2;
   			padding: 0 10px;
-			background-color: #DF73D4;
+			background-color: #842DCE;
 			color: white;
 			border-radius: 5px;
 			text-shadow: 1px 1px 1px black;
@@ -8034,6 +8034,7 @@
 	
 </body>
 </html>
+
 
 
 
