--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7621,7 +7621,7 @@
 				RichTextDataPCin = CastBufferToRichText(PlantePCin);
 				
 				PlanteInfoTxt += "<h3>Posologie</h3>";
-				PlanteInfoTxt += "&emsp;<i>Ecriver sous le format : \"Forme galénique : Posologie (espèce)\"</i><br/><br/>";
+				PlanteInfoTxt += "&emsp;<i>Ecrivez sous le format : \"Forme galénique : Posologie (espèce)\"</i><br/><br/>";
 				PlanteInfoTxt += "<textarea id=\"PlantePosoInput\" >Initializing Rich text editor ...</textarea>";
 				RichTextDataPoso = CastBufferToRichText(PlantePoso);
 				PlanteInfoTxt += "<div id=\"ListCheckedPlanteEspece\">Empty list checked plante Espece</div>";
@@ -8056,6 +8056,7 @@
 	
 </body>
 </html>
+
 
 
 
