--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7152,7 +7152,7 @@
 			let FctSQLRequestResultObj = [];
 			try {
 				FctSQLRequestResultObj = globalThis.WorkingDB.exec({
-					sql: "select Id,Name from FCTS",
+					sql: "select Id,Name from FCTS order by Name ASC",
 					rowMode: 'array',
 				});
 				console.log("End of list Fct SQL request.");
@@ -8086,6 +8086,7 @@
 	
 </body>
 </html>
+
 
 
 
