--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -6,7 +6,7 @@
 	<!--Titre-->
 	<title>PlanteVet</title>
 	<!--Favicon-->
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/png" href="favicon.png">
 	<!--- Windows-1252 / UTF-8 / iso-8859-1 -->
 	<!-- Page CSS -->
 	<style>
@@ -2811,6 +2811,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
