--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -6,7 +6,7 @@
 	<!--Titre-->
 	<title>PlanteVet</title>
 	<!--Favicon-->
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/png" href="favicon.png">
 	<!-- Page CSS -->
 	<style>
 		body {
@@ -8086,6 +8086,7 @@
 	
 </body>
 </html>
+
 
 
 
