--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2773,7 +2773,7 @@
 					<div id="FctCombo_Pr">Grande fonction : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);"></div>
 					<div id="EspeceCombo_Pr">Espèce : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');"></div>
 					<br/>
-					<input type="button" value="Rechercher" onclick="DoSearchProductByInfos();" /><br/></td>
+					<input type="button" value="Rechercher" onclick="DoSearchProductByInfos();" class="Import" /><br/></td>
 				<td></td>
 			</tr>
 		</table>
@@ -2823,7 +2823,7 @@
 					<div id="CtrIndicCombo_Pl">Contre-indication : <input type="button" id="CtrIndicInputCombo_Pl" value="Choisir" onclick="BuildCtrIndicInputCombo('Pl', 0);"></div>
 					<div id="Effet2Combo_Pl">Effet secondaire : <input type="button" id="Effet2InputCombo_Pl" value="Choisir" onclick="BuildEffet2InputCombo('Pl', 0);"></div>
 					<br/>
-					<input type="button" value="Rechercher" onclick="DoSearchPlanteByInfos();" /><br/></td>
+					<input type="button" value="Rechercher" onclick="DoSearchPlanteByInfos();" class="Import" /><br/></td>
 				<td></td>
 			</tr>
 		</table>
@@ -2840,6 +2840,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
