--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2749,7 +2749,7 @@
 					<input id="ProductNameLike" size="64" type="text" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
 					<br/>
-					<br/><input type="button" value="Rechercher" onclick="DoSearchProductByName();" />
+					<br/><input type="button" value="Rechercher" onclick="DoSearchProductByName();" class="Import" />
 					<br/>
 					<br/>
 				</td>
@@ -2794,7 +2794,7 @@
 					<input id="PlanteNameLike" size="64" type="text" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
 					<br/>
-					<br/><input type="button" value="Rechercher" onclick="DoSearchPlanteByName();" />
+					<br/><input type="button" value="Rechercher" onclick="DoSearchPlanteByName();" class="Import" />
 					<br/>
 					<br/>
 				</td>
@@ -2840,6 +2840,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
