--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -175,6 +175,14 @@
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
+
+		input[type=text] {
+		}
+		.Name {
+			border: 1px;
+			border-radius: 5px;
+			border-color: #3EB489;
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -2746,7 +2754,7 @@
 				</td>
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
-					<input id="ProductNameLike" size="64" type="text" />
+					<input id="ProductNameLike" size="64" type="text" class="Name" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
 					<br/>
 					<br/><input type="button" value="Rechercher" onclick="DoSearchProductByName();" class="Import" />
@@ -2767,7 +2775,7 @@
 			<tr class="high">
 				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche avancée :</h2>
-					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
+					Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
 					<div id="LaboCombo_Pr">Laboratoire : <input type="button" id="LaboInputCombo_Pr" value="Choisir" onclick="BuildLaboInputCombo('Pr', 0);"></div>
 					<div id="FctCombo_Pr">Grande fonction : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);"></div>
@@ -2791,7 +2799,7 @@
 				</td>
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
-					<input id="PlanteNameLike" size="64" type="text" />
+					<input id="PlanteNameLike" size="64" type="text" class="Name" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
 					<br/>
 					<br/><input type="button" value="Rechercher" onclick="DoSearchPlanteByName();" class="Import" />
@@ -2812,7 +2820,7 @@
 			<tr class="high">
 				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche avancée :</h2>
-					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
+					Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
 					<br/>Inclure : 
 					<div id="FctCombo_Pl">Grande fonction : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);"></div>
@@ -2840,6 +2848,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
