--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -179,9 +179,10 @@
 		input[type=text] {
 		}
 		.Name {
-			border: 1px;
 			border-radius: 5px;
-			border-color: #3EB489;
+			border: 1px solid #3EB489;
+			padding-left: 10px;
+			padding-right: 10px;
 		}
 	</style>
 	
@@ -2848,6 +2849,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
