--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -180,9 +180,10 @@
 		}
 		.Name {
 			border-radius: 5px;
-			border: 1px solid #3EB489;
+			border: 2px solid #3EB489;
 			padding-left: 10px;
 			padding-right: 10px;
+			font-size: 18px;
 		}
 	</style>
 	
@@ -2849,6 +2850,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
