--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -183,6 +183,7 @@
 			border: 2px solid #3EB489;
 			padding-left: 10px;
 			padding-right: 10px;
+			margin-bottom: 10px;
 			font-size: 18px;
 		}
 		.Name::Paceholder {
@@ -2853,6 +2854,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
