--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -186,7 +186,7 @@
 			margin-bottom: 10px;
 			font-size: 18px;
 		}
-		.Name::Paceholder {
+		.Name::placeholder {
 			color: #DDDDDD;
 		}
 	</style>
@@ -2760,7 +2760,7 @@
 				</td>
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
-					<input id="ProductNameLike" size="64" type="text" paceholder="Entrez le nom déposé d'un produit." class="Name" />
+					<input id="ProductNameLike" size="64" type="text" placeholder="Entrez le nom déposé d'un produit." class="Name" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
 					<br/>
 					<br/><input type="button" value="Rechercher" onclick="DoSearchProductByName();" class="Import" />
@@ -2805,7 +2805,7 @@
 				</td>
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
-					<input id="PlanteNameLike" size="64" type="text" paceholder="Entrez le nom commun ou scientifique d'une plante." class="Name" />
+					<input id="PlanteNameLike" size="64" type="text" placeholder="Entrez le nom commun ou scientifique d'une plante." class="Name" />
 					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
 					<br/>
 					<br/><input type="button" value="Rechercher" onclick="DoSearchPlanteByName();" class="Import" />
@@ -2854,6 +2854,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
