--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -186,6 +186,9 @@
 			margin-bottom: 10px;
 			font-size: 18px;
 		}
+		.Name::active {
+			border: 2px solid #3EB489;
+		}
 		.Name::placeholder {
 			color: #DDDDDD;
 		}
@@ -2854,6 +2857,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
