--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -183,10 +183,12 @@
 			border: 2px solid #3EB489;
 			padding-left: 10px;
 			padding-right: 10px;
+			padding-top: 5px;
+			padding-bottom: 5px;
 			margin-bottom: 10px;
-			font-size: 18px;
+			font-size: 14px;
 		}
-		.Name::active {
+		.Name::focus {
 			border: 2px solid #3EB489;
 		}
 		.Name::placeholder {
@@ -2857,6 +2859,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
