--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -189,7 +189,7 @@
 			font-size: 14px;
 		}
 		.Name::focus {
-			border: 2px solid #3EB489;
+			outline: none;
 		}
 		.Name::placeholder {
 			color: #DDDDDD;
@@ -2859,6 +2859,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
