--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -188,7 +188,7 @@
 			margin-bottom: 10px;
 			font-size: 14px;
 		}
-		.Name::focus {
+		.Name:focus {
 			outline: none;
 		}
 		.Name::placeholder {
@@ -2859,6 +2859,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
