--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -190,6 +190,7 @@
 		}
 		.Name:focus {
 			outline: none;
+			border: 4px solid #3EB489;
 		}
 		.Name::placeholder {
 			color: #DDDDDD;
@@ -2859,6 +2860,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
