--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -162,6 +162,21 @@
 		.Rchr:hover {
 			background-color: #B119AA;
 		}
+		.combo {
+ 			border: 0;
+  			line-height: 2;
+  			padding: 0 10px;
+			background-color: #F2A149;
+			color: white;
+			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
+		.combo:hover {
+			background-color: #E08F38;
+		}
 		
 		input::file-selector-button {
  			border: 0;
@@ -2789,9 +2804,9 @@
 					<h2>Recherche avancée :</h2>
 					Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
-					<div id="LaboCombo_Pr">Laboratoire : <input type="button" id="LaboInputCombo_Pr" value="Choisir" onclick="BuildLaboInputCombo('Pr', 0);"></div>
-					<div id="FctCombo_Pr">Grande fonction : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);"></div>
-					<div id="EspeceCombo_Pr">Espèce : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');"></div>
+					<div id="LaboCombo_Pr">Laboratoire : <input type="button" id="LaboInputCombo_Pr" value="Choisir" onclick="BuildLaboInputCombo('Pr', 0);" class="combo"></div>
+					<div id="FctCombo_Pr">Grande fonction : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);" class="combo"></div>
+					<div id="EspeceCombo_Pr">Espèce : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');" class="combo"></div>
 					<br/>
 					<input type="button" value="Rechercher" onclick="DoSearchProductByInfos();" class="Import" /><br/></td>
 				<td></td>
@@ -2835,13 +2850,13 @@
 					Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
 					<br/>Inclure : 
-					<div id="FctCombo_Pl">Grande fonction : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);"></div>
-					<div id="EspeceCombo_Pl">Espèce : <input type="button" id="EspeceInputCombo_Pl" value="Choisir" onclick="BuildEspeceInputCombo('Pl');"></div>
-					<div id="SyndromeCombo_Pl">Syndrome : <input type="button" id="SyndromeInputCombo_Pl" value="Choisir" onclick="BuildSyndromeInputCombo('Pl',0);"></div>
+					<div id="FctCombo_Pl">Grande fonction : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);" class="combo"></div>
+					<div id="EspeceCombo_Pl">Espèce : <input type="button" id="EspeceInputCombo_Pl" value="Choisir" onclick="BuildEspeceInputCombo('Pl');" class="combo"></div>
+					<div id="SyndromeCombo_Pl">Syndrome : <input type="button" id="SyndromeInputCombo_Pl" value="Choisir" onclick="BuildSyndromeInputCombo('Pl',0);" class="combo"></div>
 					<br/>
 					<br/>Exclure :
-					<div id="CtrIndicCombo_Pl">Contre-indication : <input type="button" id="CtrIndicInputCombo_Pl" value="Choisir" onclick="BuildCtrIndicInputCombo('Pl', 0);"></div>
-					<div id="Effet2Combo_Pl">Effet secondaire : <input type="button" id="Effet2InputCombo_Pl" value="Choisir" onclick="BuildEffet2InputCombo('Pl', 0);"></div>
+					<div id="CtrIndicCombo_Pl">Contre-indication : <input type="button" id="CtrIndicInputCombo_Pl" value="Choisir" onclick="BuildCtrIndicInputCombo('Pl', 0);" class="combo"></div>
+					<div id="Effet2Combo_Pl">Effet secondaire : <input type="button" id="Effet2InputCombo_Pl" value="Choisir" onclick="BuildEffet2InputCombo('Pl', 0);" class="combo"></div>
 					<br/>
 					<input type="button" value="Rechercher" onclick="DoSearchPlanteByInfos();" class="Import" /><br/></td>
 				<td></td>
@@ -2860,6 +2875,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
