--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -164,12 +164,12 @@
 		}
 		.combo {
  			border: 0;
-  			line-height: 2;
-  			padding: 0 10px;
+  			line-height: 1.5;
+  			padding: 0 7.5px;
 			background-color: #F2A149;
-			color: white;
+			color: black;
 			border-radius: 5px;
-			text-shadow: 1px 1px 1px black;
+			text-shadow: 1px 1px 1px white;
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
@@ -2875,6 +2875,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
