--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -383,7 +383,7 @@
 		// build Fct combo
 		function BuildFctInputCombo(PrOrPl,DfltFctId)
 		{
-			let FctInputComboTxt = "Grande fonction concernée : ";
+			let FctInputComboTxt = "Grande fonction : ";
 		
 			// pre build combo
 			FctInputComboTxt += "<select id=\"FctInputCombo_" + PrOrPl + "\" style=\"width: 200px;\">";
@@ -432,7 +432,7 @@
 		// build Espece combo
 		function BuildEspeceInputCombo(PrOrPl)
 		{
-			let EspeceInputComboTxt = "Espèce concernée : ";
+			let EspeceInputComboTxt = "Espèce : ";
 		
 			//build combo
 			EspeceInputComboTxt += "<select id=\"EspeceInputCombo_" + PrOrPl + "\" style=\"width: 200px;\">";
@@ -2875,6 +2875,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
